syntax = "proto3";
package grpc.firebase.admin;
option java_package = "com.grpc.api";

service FirebaseClientService {
    // サーバーからクライアントにレスポンスを送り続ける
    rpc SearchProject(ProjectSearchRequest) returns (stream ProjectSearchResponse);
    rpc UpdateProject(ProjectUpdateRequest) returns (ProjectUpdateResponse);
    rpc RegisterProject(ProjectUpdateRequest) returns (ProjectUpdateResponse);
    rpc DeleteProject(ProjectDeleteRequest) returns (DeleteResponse);

    rpc UpdateGroup(GroupUpdateRequest) returns (GroupUpdateResponse);
    rpc RegisterGroup(GroupUpdateRequest) returns (GroupUpdateResponse);
    rpc DeleteGroup(GroupDeleteRequest) returns (DeleteResponse);

    rpc UpdateTodo(TodoUpdateRequest) returns (TodoUpdateResponse);
    rpc RegisterTodo(TodoUpdateRequest) returns (TodoUpdateResponse);
    rpc DeleteTodo(TodoDeleteRequest) returns (DeleteResponse);
}

// ログイン状態チェックをサーバで行う
// project
message ProjectSearchRequest {
    string projectId = 1;
}

message ProjectUpdateRequest {
    string name = 1;
}

message ProjectDeleteRequest {
    string projectId = 1;
}

message ProjectSearchResponse {
    string projectId = 1;
    string title = 2;
    repeated ProjectGroup group = 3;
    repeated Todo todo = 4;
}

message ProjectUpdateResponse {
    string projectId = 1;
    string title = 2;
}

message DeleteResponse {
    string message = 1;
}

// group
message GroupUpdateRequest {
    string name = 1;
    GroupColor color = 3;
}

message GroupDeleteRequest {
    string groupId = 1;
}
message GroupUpdateResponse {
    string groupId = 1;
    string title = 2;
    GroupColor color = 3;
    repeated string todoIds = 4;
}

message ProjectGroup {
    string groupId = 1;
    string title = 2;
    GroupColor color = 3;
    repeated string todoIds = 4;
}

// todo
message TodoUpdateRequest {
    string name = 1;
    string content = 2;
}

message TodoDeleteRequest {
    string todoId = 1;
}

message TodoUpdateResponse {
    string todoId = 1;
    string title = 2;
    string contant = 3;
}

message Todo {
    string todoId = 1;
    string title = 2;
    string contant = 3;
}

enum GroupColor {
    BLACK = 0;
    GRAY = 1;
    LIGHT_GRAY = 2;
    SKY_BLUE = 3;
    CYAN = 4;
    RED = 5;
    PINK = 6;
    MAGENTA = 7;
    VIOLET = 8;
    TURQUOISE = 9;
    OLIVE = 10;
    LIME = 11;
    LIME_GREEN = 12;
}
